@@ -1,3 +1,11 @@
+2011-09-01  Ira Rosen  <ira.rosen@linaro.org>
+
+	PR tree-optimization/50178
+	* tree-vect-stmts.c (vectorizable_call): Update the related
+	pattern statement before deleting the original call.
+	(vect_transform_stmt): Don't expect the related pattern statement
+	to match the original statement after transformation.
+
 2011-08-29  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/50116
